Closed Bug 1825434 Opened 2 years ago Closed 2 years ago

Warning Spew on Debug Build: "WARNING: have unconstrained width or height [...]"

Categories

(Core :: Layout: Positioned, defect)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: dshin, Assigned: TYLin)

References

Details

Attachments

(4 files)

"WARNING: have unconstrained width or height; this should only result from very large sizes, not attempts at intrinsic size calculation: 'aPercentBasis != NS_UNCONSTRAINEDSIZE', file /home/dshin/mozilla-unified/layout/base/nsLayoutUtils.h:1566"

Spews due to New Tab being loaded in. Especially spews when the windows is being resized.

I can reproduce with dshin's testcase in kinda-old debug builds, e.g. 2022-09-30, launched via:

mozregression -B debug --launch 2022-09-30

So: preexisting issue, which we presumably started to trip over recently via some frontend change (probably a xul-to-flex conversion)

regression range for this happening on new-tab page:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ee139bb6ad78eeac5480a561eb92fc156907e956&tochange=aa751ccc4abd19b78cf384df2dcf33461aa5fa87
--> bug 1819712. So, the new-tab save-to-pocket icon must be triggering this preexisting issue.

Depends on: 1819712

So, the new-tab save-to-pocket icon must be triggering this preexisting issue.

(This makes sense, given the "stp-button" stuff in the reduced testcase)

Severity: -- → S3

I reduced dshin's testcase a bit. The warning can be triggered in block layout.

The containing block's block-size (blockContentSize.BSize()) can be
unconstrained if it has position:relative at the time we call the
CalculateBorderPaddingMargin(). That triggers the warning. However, the
percentage margin and padding should resolve against containing block's
inline-size.

Assignee: nobody → aethanyc
Status: NEW → ASSIGNED
Pushed by tlin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4b44c83b4e67 Use containing block's inline-size as percentage basis when computing abspos hypothetical position. r=AlaskanEmily
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: